Correct schema data and user model
