# service/models.py
@@ -2,8 +2,8 @@ from service import db
 
 class UserModel(db.Model):
     id  = db.Column(db.Integer, primary_key=True)
-    name  = db.Column(db.String(80), unique=True, nullable=False)
-    email  = db.Column(db.String(80), unique=True, nullable=False)
+    username  = db.Column(db.String(80), unique=True, nullable=False)
+    pre_langs = db.Column(db.String(25), nullable=False)
 
     def __repr__(self):
-        return f"User(name= {self.name}, email= {self.email})"
+        return f"User(username= {self.username}, pref_langs= {self.pre_langs})"
