# swagger/config.json
@@ -49,13 +49,13 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "name": {
+                  "username": {
                     "type": "string",
-                    "example": "Nuxt"
+                    "example": "Eugene233"
                   },
-                  "email": {
+                  "pre_langs": {
                     "type": "string",
-                    "example": "agpb@wmde.de"
+                    "example": "en,fr,de,bag,dag"
                   }
                 }
               }
@@ -89,8 +89,8 @@
         "summary": "Retrieve specific user",
         "parameters": [
           {
-            "email": "id",
-            "in": "path",
+            "username": "username",
+            "in": "username",
             "required": true,
             "schema": {
               "type": "string"
@@ -125,14 +125,13 @@
         "summary": "Update a user",
         "parameters": [
           {
-            "name": "id",
-            "in": "path",
+            "username": "username",
+            "in": "username",
             "required": true,
             "schema": {
-              "type": "integer",
-              "format": "int32"
+              "type": "string"
             },
-            "description": "ID of the user to be updated"
+            "description": "username of the user to be updated"
           }
         ],
         "requestBody": {
@@ -141,18 +140,17 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "name": {
+                  "username": {
                     "type": "string",
-                    "example": "Nuxt"
+                    "example": "Eugene233"
                   },
-                  "email": {
+                  "pre_langs": {
                     "type": "string",
-                    "example": "agpb@wmde.de"
+                    "example": "en,fr,de,bag,dag"
                   }
                 },
                 "required": [
-                  "name",
-                  "email"
+                  "username"
                 ]
               }
             }
@@ -186,14 +184,13 @@
         "summary": "Delete a user",
         "parameters": [
           {
-            "name": "id",
-            "in": "path",
+            "username": "username",
+            "in": "username",
             "required": true,
             "schema": {
-              "type": "integer",
-              "format": "int32"
+              "type": "string"
             },
-            "description": "ID of the user to be deleted"
+            "description": "username of the user to be deleted"
           }
         ],
         "responses": {
@@ -212,14 +209,13 @@
       "user": {
         "type": "object",
         "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int64",
-            "example": 1
-          },
-          "name": {
+          "pref_langs": {
             "type": "string",
-            "example": "Nuxt"
+            "example": "en,fr,de,bag,dag"
+          },
+          "username": {
+            "type": "string",
+            "example": "Eugene233"
           }
         }
       }
